// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderNumberSearch QueryBuilderNumberSearch Component Display different placeholder for in/not in operators: Placeholder expected to be different for in operator. 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <input
        class="form-control"
        placeholder="Enter comma-separated values..."
        type="text"
        value="test"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderNumberSearch QueryBuilderNumberSearch Component Display different placeholder for in/not in operators: Placeholder expected to be different for not in operator. 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <input
        class="form-control"
        placeholder="Enter comma-separated values..."
        type="text"
        value="test"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderNumberSearch QueryBuilderNumberSearch Component Display field if match type is equals: Expect number field not to be displayed since the match type is not equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderNumberSearch QueryBuilderNumberSearch Component Display field if match type is equals: Expect number field to be displayed since match type is equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <input
        class="form-control"
        placeholder="Enter number search value..."
        type="number"
        value="test"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Edge cases If no field value is provided, nothing should be generated. 1`] = `Object {}`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Empty operation Normal field 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "exists": Object {
        "field": "data.attributes.numberField",
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Empty operation With relationship as field 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "nested": Object {
              "path": "included",
              "query": Object {
                "bool": Object {
                  "must": Array [
                    Object {
                      "exists": Object {
                        "field": "includes.name",
                      },
                    },
                    Object {
                      "term": Object {
                        "included.type": "collection",
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Equals operation Normal field 1`] = `
Object {
  "term": Object {
    "data.attributes.numberField": "123",
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Equals operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "includes.name": "123",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Exact Match operation Normal field 1`] = `
Object {
  "term": Object {
    "data.attributes.numberField": "123",
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Exact Match operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "includes.name": "123",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Greater Than Or Equal To operation Normal field 1`] = `
Object {
  "range": Object {
    "data.attributes.numberField": Object {
      "gte": "123",
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Greater Than Or Equal To operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gte": "123",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Greater Than operation Normal field 1`] = `
Object {
  "range": Object {
    "data.attributes.numberField": Object {
      "gt": "123",
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Greater Than operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "gt": "123",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function In operation Normal field 1`] = `
Object {
  "bool": Object {
    "must": Object {
      "terms": Object {
        "data.attributes.numberField": Array [
          "1",
          "2",
          "3.5",
          "6",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Less Than operation Normal field 1`] = `
Object {
  "range": Object {
    "data.attributes.numberField": Object {
      "lt": "123",
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Less Than operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lt": "123",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not Equals operation Normal field 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "term": Object {
              "data.attributes.numberField": "123",
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.numberField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not Equals operation With relationship as field 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "term": Object {
                  "includes.name": "123",
                },
              },
            },
          },
        },
      },
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "exists": Object {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.collection.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not empty operation Normal field 1`] = `
Object {
  "exists": Object {
    "field": "data.attributes.numberField",
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not empty operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "exists": Object {
              "field": "includes.name",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function Not in operation Normal field 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "terms": Object {
        "data.attributes.numberField": Array [
          "1",
          "2",
          "3.5",
          "6",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function lessThanOrEqualTo operation Normal field 1`] = `
Object {
  "range": Object {
    "data.attributes.numberField": Object {
      "lte": "123",
    },
  },
}
`;

exports[`QueryBuilderNumberSearch transformNumberSearchToDSL function lessThanOrEqualTo operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "includes.name": Object {
                "lte": "123",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;
